--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body style="font-family:Times New Roman"><center>
   				<h1>Curriculum Vitae</h1>
   				<b>Name- Deepanshu<br>Age-18<br>Gender-Male<br>Contact no.- 9024068027</b></center><hr></hr>
-  				<a href="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit%20user%20files/Educational%20Qualification.html">Educational Qualification</a>
+  				<a href="file:///storage/emulated/0/Html/Educational%20Qualification.html">Educational Qualification</a>
   				<br><br>
-  				<a href="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit%20user%20files/Hobbies.html">Hobbies</a>
+  				<a href="file:///storage/emulated/0/Html/Hobbies.html">Hobbies</a>
   </body>
 </html>
